<resources>
    <string name="app_name">FocusLock</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Login">Login</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="signup">SignUp</string>
    <string name="google">Google</string>
    <string name="set_password_visible">set password visible</string>
</resources>
